--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ th{
   margin:40px 0 20px 0;
 }
 #footerLogo img{
-  max-width:200px;
+  max-width:400px;
   width:50%;
   height:auto;
 }
@@ -135,7 +135,7 @@ th{
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 – Profi panel</div>
+  <div>Attack FD 25 AUTOMAT– PANEl KOTELNY</div>
   <button id="fsBtn" title="Fullscreen">⛶</button>
 </header>
 
