--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ th{
 
 <header>
   <div id="clock"></div>
-  <div>Attack FD 25 AUTOMAT– PANEl KOTELNY</div>
+  <div>Attack FD 25 AUTOMAT– PANEL KOTELNY</div>
   <button id="fsBtn" title="Fullscreen">⛶</button>
 </header>
 
@@ -144,12 +144,12 @@ th{
 <div class="grid">
   <div class="card"><h2>🔥 Kotel</h2><div class="value" id="tKotel">--</div></div>
   <div class="card"><h2>↩️ Zpátečka</h2><div class="value blue" id="tZpet">--</div></div>
-  <div class="card"><h2>🌡️ ΔT</h2><div class="value orange" id="deltaT">--</div></div>
-  <div class="card"><h2>⚡ Energie (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
+  <div class="card"><h2>🌡️ Teplotní spád ΔT</h2><div class="value orange" id="deltaT">--</div></div>
+  <div class="card"><h2>⚡ Výkon kotle (1 h)</h2><div class="value green" id="powerKWbig">--</div></div>
   <div class="card"><h2>⚙️ Podavač</h2><div class="value" id="tPodavac">--</div></div>
   <div class="card"><h2>💧 Bojler</h2><div class="value" id="tBojler">--</div></div>
   <div class="card"><h2>🌡️ Venku</h2><div class="value" id="tVenku">--</div></div>
-  <div class="card"><h2>⏱️ Podavač celkem</h2><div class="value" id="feedTotal">--</div></div>
+  <div class="card"><h2>⏱️ Podavač celkem h</h2><div class="value" id="feedTotal">--</div></div>
 </div>
 
 <br>
@@ -157,11 +157,11 @@ th{
 <div class="card">
 <h2>💰 Spotřeba uhlí</h2>
 <div class="grid">
-  <div><div class="sub">HODINA</div><div class="value orange" id="kgHour">0 kg</div></div>
-  <div><div class="sub">DNES</div><div class="value green" id="kgDay">0 kg</div></div>
-  <div><div class="sub">MĚSÍC</div><div class="value blue" id="kgMonth">0 kg</div></div>
-  <div><div class="sub">CENA DNES</div><div class="value" id="costDay">0 Kč</div></div>
-  <div><div class="sub">CENA MĚSÍC</div><div class="value" id="costMonth">0 Kč</div></div>
+  <div><div class="sub">🔥HODINOVÁ SPOTŘEBA</div><div class="value orange" id="kgHour">0 kg</div></div>
+  <div><div class="sub">🔥DNES PROTOPENO</div><div class="value green" id="kgDay">0 kg</div></div>
+  <div><div class="sub">🔥ZA MĚSÍC</div><div class="value blue" id="kgMonth">0 kg</div></div>
+  <div><div class="sub">💰DNES PROTOPENO</div><div class="value" id="costDay">0 Kč</div></div>
+  <div><div class="sub">💰ZA MĚSÍC PROTOPENO</div><div class="value" id="costMonth">0 Kč</div></div>
 </div>
 <br>
 <button id="historyBtn">📅 Denní historie spotřeby</button>
